# PROYECTO2_AED

./: .gitignore  CMakeLists.txt  README.md  REPORTE.md
data/: benchmark_results.csv  sample.txt
include/: App.h  ChildMap.h  DocumentLoader.h  NaiveSearch.h  SuffixTree.h  TextNormalizer.h
src/: App.cpp  DocumentLoader.cpp  NaiveSearch.cpp  SuffixTree.cpp  TextNormalizer.cpp  benchmark.cpp  main.cpp
